Add some style.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<doctype html>
-<html>
-  <head>
+<!DOCTYPE html> 
+<html> 
+  <head> 
+    <meta charset='utf-8'> 
     <title>Bigtop</title>
-  </head>
-  <body>
-    <h1>Bigtop: A Web Framework</h1>
-
-    <p>Bigtop is a set of additions to the Lift web framework.</p>
-  </body>
+    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" /> 
+ </head> 
+<body> 
+<div id="main"> 
+  <h1>Bigtop: A Web Framework</h1>
+  <p>Bigtop is a web framework implemented in <a
+  href="http://www.scala-lang.org/">Scala</a> that builds on
+  the excellent <a href="http://liftweb.net">Lift</a> web framework.</p>
+</div>
+</body>
 </html>
